gcc/testsuite/gdc.test/runnable/imports/link8023b.d
module imports.link8023b;
import link8023;
