gcc/testsuite/gdc.test/fail_compilation/imports/spell23908b.d
module imports.spell23908b;

import imports.spell23908a;
